--- a/readme
+++ b/readme
@@ -1,5 +1,5 @@
 This is my major projects
 the major part of this is non-comercial, because most part of customers ask 
-not add they projects into partfolio
+not add they projects into portfolio
 some old projects are not here too
 all another projects are here
